src/test/ui/parser/missing_right_paren.rs
// ignore-tidy-trailing-newlines
// error-pattern: aborting due to 2 previous errors
fn main((ؼ